add strike through title to completed todos

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -113,6 +113,10 @@ button:hover {
   color: grey;
 }
 
+.todoItem.complete h2 {
+  text-decoration: line-through;
+}
+
 .todoHeader {
   display: flex;
 
