--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -81,19 +81,30 @@ button:hover {
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: scale(0);
+    /* transform: scale(0); */
+    transform: translateY(-25px);
   }
 
   to {
     opacity: 1;
-    transform: scale(1);
+    /* transform: scale(1); */
+    transform: translateY(0);
   }
 }
 
 .newTodo textarea {
   animation: fadeIn 0.3s ease-in;
-  margin-top: 12px;
+  margin-top: 6px;
   resize: none;
+}
+
+.datePicker {
+  margin-top: 12px;
+  animation: fadeIn 0.3s ease-in;
+}
+
+.datePicker button {
+  height: 10%;
 }
 
 .todoItem {
@@ -153,8 +164,4 @@ button:hover {
   position: fixed;
   bottom: 0;
   right: 0;
-}
-
-.datePicker button {
-  height: 10%;
 }
